# LiftOS

./: .gitignore  README.md  pyproject.toml
designs/: DesignReviewV1.md  design.md  intake.md  optimization.md  optimization_intake.md  plan.md  requirements.md
scripts/: plot_workloads.py
src/liftos/: cli.py  demand.py  engine.py  logger.py  models.py  movement.py  scheduler.py
src/liftos/simulator/: charts.py  workloads.py
src/liftos/strategies/: __init__.py  adaptive.py  nearest_car.py  round_robin.py
tests/: test_demand.py  test_engine.py  test_logger.py  test_models.py  test_movement.py  test_strategies.py  test_workloads.py
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webapp/scripts/: prepare-demo.sh
webapp/src/: App.css  App.tsx  types.ts
webapp/src/components/: BuildingView.tsx  ChartsPanel.tsx  PlaybackControls.tsx  StatsBar.tsx
webapp/src/data/: indexer.ts  loader.ts
webapp/src/stores/: data-store.ts  playback-store.ts
