[project]
name = "liftos"
version = "0.1.0"
description = "Smart elevator routing system with discrete-event simulation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8",
]

[project.scripts]
liftos = "liftos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liftos"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
